@@ -21,11 +21,7 @@ gplink_SOURCES=\
 
 gplink_LDADD = ${top_builddir}/@LIBGPUTILS@ ${top_builddir}/@LIBIBERTY@
 
-AM_YFLAGS = -dvt
+AM_YFLAGS = -d -vt
 AM_LFLAGS = -i
 
-EXTRA_DIST = parse.h
-
 CLEANFILES = parse.output
-
-MAINTAINERCLEANFILES = parse.c parse.h scan.c
